# ledgermem-eval

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: bench-cron.yml  ci.yml
harness/: README.md
src/ledgermem_eval/: __init__.py  cli.py  output.py  scoring.py
src/ledgermem_eval/adapters/: __init__.py  base.py  baseline_adapter.py  ledgermem_adapter.py  mem0_adapter.py  openai_assistants_adapter.py  zep_adapter.py
src/ledgermem_eval/benchmarks/: __init__.py  base.py  locomo.py  longmemeval.py  realagentmem.py
tests/: test_scoring.py
web/: package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/leaderboard/: page.tsx
web/app/methodology/: page.tsx
web/components/: ParetoChart.tsx  ResultTable.tsx
web/lib/: results.ts
