[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmnemo-eval"
version = "0.1.0"
description = "Public benchmark harness for memory systems (Mnemo, Mem0, Zep, OpenAI Assistants)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Mnemo", email = "founders@getmnemo.xyz" }]
keywords = ["memory", "llm", "benchmark", "evaluation", "getmnemo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.7.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "datasets>=2.20.0",
    "getmnemo>=0.1.0; python_version >= '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
getmnemo-eval = "getmnemo_eval.cli:cli"

[project.urls]
Homepage = "https://github.com/getmnemo/getmnemo-eval"
Documentation = "https://docs.getmnemo.xyz"
Repository = "https://github.com/getmnemo/getmnemo-eval"
Issues = "https://github.com/getmnemo/getmnemo-eval/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/getmnemo_eval"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
